[package]
name = "shori"
version = "0.0.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/shori"
readme = "README.md"
description = "Flexible parsing and transformation utilities for structured data. #[derive(Parser)] adds methods like .parse().json(), .toml(), .bin(), .map(), and .from() to simplify conversions using common wrappers like Arc, Mutex, Box, OnceCell, etc."
categories = ["parsing", "data-structures"]
keywords = ["parser", "data", "json", "transform", "conversion"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/shori"
documentation = "https://docs.rs/shori"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
mokuya = "0.0"
bincode = "2.0"
hex = "0.4"
kenzu = "0.0"
toml = { version = "0.9", features = ["serde"] }
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }