[package]
name = "shori"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/shori"
readme = "README.md"
description = "Flexible parsing and transformation utilities for structured data. #[derive(Parser)] adds methods like .parse().json(), .toml(), .bin(), .map(), and .from() to simplify conversions using common wrappers like Arc, Mutex, Box, OnceCell, etc."
categories = ["parsing", "data-structures"]
keywords = ["parser", "data", "json", "transform", "conversion"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/shori"
documentation = "https://docs.rs/shori"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn  = "2"
mokuya ="0"
hex = { version = "0", optional = true }
bincode = { version = "2", optional = true }
toml = { version = "0", features = ["serde"], optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
nekotracing = { version = "0.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
kenzu = { version = "0.1", features = ["default"] }
regex = "1"

[features]
default = ["full"]
hex = ["dep:hex"]
bincode = ["dep:bincode"]
toml = ["dep:toml"]
regex = ["dep:regex"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]
tokio = ["dep:tokio"]
nekotracing = ["dep:nekotracing"]
arc = []
box = []
hashmap = []
mutex = []
oncecell = []
refcell = []
vec = []
unsafecell = []
tuple = []

full = [
    "hex", 
    "bincode", 
    "nekotracing",
    "toml", 
    "regex", 
    "serde", 
    "serde_json", 
    "tokio", 
    "arc",
    "box",
    "hashmap",
    "mutex",
    "oncecell",
    "refcell",
    "vec",
    "unsafecell",
    "tuple"
]