[package]
name = "macros"
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/shori/macros"
readme = "../README.md"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]
description = "Flexible parsing and transformation utilities for structured data. #[derive(Parser)] adds methods like .parse().json(), .toml(), .bin(), .map(), and .from() to simplify conversions using common wrappers like Arc, Mutex, Box, OnceCell, etc."
categories = ["parsing", "data-structures"]
keywords = ["parser", "data", "json", "transform", "conversion"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/shori/macros"
documentation = "https://docs.rs/shori/macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
mokuya = "0.0"
bincode = { workspace = true }
hex = { workspace = true }
kenzu = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }